# atJIT

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CMakeTests.txt  LICENSE  README.md  TODO.md  get-llvm-with-polly.sh  get-llvm.sh
benchmark/: CMakeLists.txt  benchmark.cpp  convolve.h  fannkuchredux.cpp  matmul.h  qsort.h  setup.sh  spectralnorm.h
cmake/: CMakeLists.txt  EasyJitConfig.cmake.in  FindBenchmark.cmake  GCD.cmake  Jsonlint.cmake  LLVM.cmake  Polly.cmake  Python.cmake  Valgrind.cmake  XGBoost.cmake
cpplib/: CMakeLists.txt
cpplib/include/easy/: attributes.h  cache.h  code_cache.h  exceptions.h  jit.h  meta.h  options.h  param.h
cpplib/include/easy/runtime/: BitcodeTracker.h  Context.h  Function.h  LLVMHolderImpl.h  RuntimePasses.h
doc/: CMakeLists.txt
doc/readme/: CMakeLists.txt  README.md.in  camfilter.cpp  readme_is_up-to-date.test  simple_at.cpp  update_doc.sh
example/: matrixmul.c
include/: CMakeLists.txt  easyjit.h
include/easy/: attributes.h  code_cache.h  exceptions.h  function_wrapper.h  jit.h  meta.h  options.h  param.h
include/easy/runtime/: BitcodeTracker.h  Compat.h  Context.h  Function.h  LLVMHolder.h  LLVMHolderImpl.h  RuntimePasses.h  Utils.h
include/tuner/: AnalyzingTuner.h  AnnealingTuner.h  BayesianTuner.h  CodegenOptions.h  Feedback.h  JSON.h  Knob.h  KnobConfig.h  KnobSet.h  LoopKnob.h  MDUtils.h  Optimizer.h  RandomTuner.h  TunableInliner.h  Tuner.h  Util.h  driver.h  optimizer.h  param.h
misc/: atjitc.in  compile_easy.sh  easycc.in  get_llvm.sh  test.sh
misc/doc/: generate.py  include.py  python.py
misc/docker/: Dockerfile.easy  Dockerfile.llvm  GenDockerfile.py  build_docker.sh
pass/: CMakeLists.txt  Easy.cpp  LoopNamer.cpp  MayAliasTracer.cpp  MayAliasTracer.h  Passes.h  RegisterPasses.cpp  StaticPasses.h
pass/src/: declare.cpp  declare.h  extract.cpp  extract.hpp  identify.cpp  identify.h
runtime/: BitcodeTracker.cpp  CMakeLists.txt  CompilerInterface.cpp  Context.cpp  Function.cpp  InitNativeTarget.cpp  Utils.cpp
runtime/include/easy/runtime/: BitcodeTracker.h  CompilerInterface.h  Context.h  Function.h  RuntimePasses.h
runtime/pass/: ContextAnalysis.cpp  DevirtualizeConstant.cpp  InlineParameters.cpp
runtime/src/: easy_jit.cpp  runtime.cpp
runtime/tuner/: AnalyzingTuner.cpp  Driver.cpp  Feedback.cpp  Knob.cpp  KnobConfig.cpp  KnobSet.cpp  LoopKnob.cpp  LoopSettingGen.cpp  Optimizer.cpp  Statics.cpp  TunableInliner.cpp  Util.cpp
test/: CMakeLists.txt  lit.cfg.in  matrixmul.c  matrixmul_inline.c
tests/: benchmark.test  ci.cpp  compare.sh  lit.cfg.in  meta.cpp  multi_file+regexp.cpp  new_func_traits.cpp  opt_level.cpp  simple_cache.cpp  simple_double_a.cpp  simple_float_a.cpp  simple_fun_ptr_a.cpp  simple_int_a.cpp  simple_long_a.cpp  simple_ptr_a.cpp  simple_thread.cpp  static_var_a.cpp  static_var_b.cpp  type_list+func_traits.cpp
tests/doc/: lit.cfg.in
tests/install/: CMakeLists.txt  test.cpp  test.cpp.disabled
tests/meta/: bad_signature_a.cpp  bad_signature_b.cpp  bad_signature_c.cpp  bad_signature_d.cpp  bad_signature_e.cpp  bad_signature_f.cpp  bad_signature_g.cpp  new_func_traits.cpp  type_list+func_traits.cpp
tests/perf/: fannkuchredux.cpp
tests/simple/: array.cpp  array_bad.cpp  bad_signature_a.cpp  bad_signature_b.cpp  bad_signature_c.cpp  cache.cpp  compose_bad.cpp  compose_ptr.cpp  compose_ref.cpp  custom_key_cache.cpp  devirtualization.cpp  devirtualization_nohint.cpp  double_a.cpp  exception_a.cpp  float_a.cpp  fun_ptr_a.cpp  fun_ptr_b.cpp  fun_ptr_c.cpp  fun_ptr_d.cpp  fun_ptr_e.cpp  fun_ptr_f.cpp  int_a.cpp  int_ptr_a.cpp  long_a.cpp  multi_file+regexp.cpp  nortti_a.cpp  opt_level.cpp  ptr_a.cpp  serialize.cpp  serialize_multifile.cpp  serialize_static.cpp  small_struct.cpp  static_var_a.cpp  static_var_b.cpp  thread.cpp  unroll.cpp
tests/tuner/: intrange_1.cpp  intrange_2.cpp  lifetime.cpp  lifetime_1.cpp  parallel_compile.cpp  sq_matmul.cpp  stats.cpp  tile.cpp
xgboost/: .gitignore  get.sh
